Add get user's classes to backend
